--- a/Consultar.html
+++ b/Consultar.html
@@ -308,19 +308,19 @@
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
           </tr>
           <tr>
-            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtUnidadMedica" placeholder="No. Donante"></td>
-            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="No. Unidad"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtNoDonante" placeholder="No. Donante"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtNoUnid" placeholder="No. Unidad"></td>
           </tr>   
           <tr>
-            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtUnidadMedica" placeholder="Volumen"></td>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtPaciente" placeholder="Fecha Entrega"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtVolumen" placeholder="Volumen"></td>
+            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecEntrega" placeholder="Fecha Entrega"></td>
           </tr>
           <tr>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtUnidadMedica" placeholder="Fecha Extracci&oacute;n"></td>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtPaciente" placeholder="Fecha Registro"></td>
+            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecExtr" placeholder="Fecha Extracci&oacute;n"></td>
+            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecReg" placeholder="Fecha Registro"></td>
           </tr>
           <tr>
-            <td width="50%"><select style="border-bottom:1px" class="form-control form-control-user" name="txtUnidMedica">
+            <td width="50%"><select style="border-bottom:1px" class="form-control form-control-user" name="txtGrupoSanguineo">
                         	<option selected>Grupo Sangu&iacute;neo</option>
                         	<option>A+</option>
                             <option>A-</option>
@@ -333,6 +333,9 @@
                     		</select></td>
              <td colspan="3" width="50%">&nbsp;</td>
             
+          </tr>
+          <tr>
+          <td colspan="4" >&nbsp;</td>
           </tr>
           </table>
           <a href="AsignacionPlaqueta.html" class="btn btn-danger btn-user btn-block">
