--- a/Consultar.html
+++ b/Consultar.html
@@ -298,7 +298,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Resultados de Prueba de Laboratorio/font></b></h1>
+          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Resultados de Prueba de Laboratorio</font></b></h1>
           <table class="user" width="100%" >
             <tr>
             <td colspan="4" style="color:#333;background-color:#E9E9E9;"><b>Resultados</b></td>
