--- a/Consultar.html
+++ b/Consultar.html
@@ -313,11 +313,11 @@
           </tr>   
           <tr>
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtVolumen" placeholder="Volumen"></td>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecEntrega" placeholder="Fecha Entrega"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtFecEntrega" placeholder="Fecha Entrega"></td>
           </tr>
           <tr>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecExtr" placeholder="Fecha Extracci&oacute;n"></td>
-            <td colspan="2" width="50%"><input type="date" class="form-control form-control-user" id="txtFecReg" placeholder="Fecha Registro"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtFecExtr" placeholder="Fecha Extracci&oacute;n"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtFecReg" placeholder="Fecha Registro"></td>
           </tr>
           <tr>
             <td width="50%"><select style="border-bottom:1px" class="form-control form-control-user" name="txtGrupoSanguineo">
