--- a/Consultar.html
+++ b/Consultar.html
@@ -335,7 +335,66 @@
             
           </tr>
           <tr>
-          <td colspan="4" >&nbsp;</td>
+          <td colspan="4" ><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
+                              <tr style="border-color:#CCC">
+                                <td width="13%" rowspan="2" align="center">Fecha</td>
+                                <td width="17%" rowspan="2" align="center">An&aacute;lisis</td>
+                                <td width="24%" rowspan="2" align="center">Resultados</td>
+                                <td colspan="2" align="center">Valores de Referencia</td>
+                              </tr>
+                              <tr style="border-color:#CCC">
+                                <td width="22%">&nbsp;</td>
+                                <td width="24%">&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#E9E9E9">
+                                <td colspan="5">Resultados de Laboratorio de Hematolog&iacute;a</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#FFF">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#FFF">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#E9E9E9">
+                                <td colspan="5">Resultados de Laboratorio de Serolog&iacute;a</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#FFF">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC; background-color:#FFF">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+          </table>
+          
+            <tr style="border-color:#CCC">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                            </table></td>
           </tr>
           </table>
           <a href="AsignacionPlaqueta.html" class="btn btn-danger btn-user btn-block">
