--- a/Consultar.html
+++ b/Consultar.html
@@ -335,6 +335,9 @@
             
           </tr>
           <tr>
+          <tr>
+            <td colspan="4" style="color:#333;background-color:#E9E9E9;">&nbsp;</td>
+          </tr>
           <td colspan="4" ><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
                               <tr style="border-color:#CCC">
                                 <td width="13%" rowspan="2" align="center">Fecha</td>
