--- a/Consultar.html
+++ b/Consultar.html
@@ -336,7 +336,7 @@
           </tr>
           <tr>
           <tr>
-            <td colspan="4" style="color:#333;background-color:#E9E9E9;">&nbsp;</td>
+            <td colspan="4" >&nbsp;</td>
           </tr>
           <td colspan="4" ><table class="table-danger" align="center" style="color:#000" width="90%" border="1">
                               <tr style="border-color:#CCC">
