--- a/Consultar.html
+++ b/Consultar.html
@@ -305,7 +305,7 @@
           </tr>
           <tr>
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtUnidadMedica" placeholder="Unidad M&eacute;dica"></td>
-            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
+            <td colspan="2" width="50"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
           </tr>
           <tr>
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtNoDonante" placeholder="No. Donante"></td>
@@ -334,7 +334,6 @@
              <td colspan="3" width="50%">&nbsp;</td>
             
           </tr>
-          <tr>
           <tr>
             <td colspan="4" >&nbsp;</td>
           </tr>
@@ -385,19 +384,7 @@
                               </tr>
           </table>
           
-            <tr style="border-color:#CCC">
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                              </tr>
-                              <tr style="border-color:#CCC">
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                              </tr>
-                            </table></td>
+                                        </table></td>
           </tr>
           </table>
           <a href="AsignacionPlaqueta.html" class="btn btn-danger btn-user btn-block">
