--- a/Consultar.html
+++ b/Consultar.html
@@ -305,7 +305,7 @@
           </tr>
           <tr>
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtUnidadMedica" placeholder="Unidad M&eacute;dica"></td>
-            <td colspan="2" width="50"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
+            <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtPaciente" placeholder="Paciente"></td>
           </tr>
           <tr>
             <td colspan="2" width="50%"><input type="text" class="form-control form-control-user" id="txtNoDonante" placeholder="No. Donante"></td>
@@ -383,8 +383,19 @@
                                 <td>&nbsp;</td>
                               </tr>
           </table>
+              <p>&nbsp;</p>
           
-                                        </table></td>
+            <tr style="border-color:#CCC">
+                                <td colspan="2"><input type="text" class="form-control form-control-user" id="txtProporcionaDatos" placeholder="Qui&eacute;n proporciona los datos"></td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                              <tr style="border-color:#CCC">
+                                <td colspan="2">Aprobaci&oacute;n del m&eacute;dico Responsable&nbsp;&nbsp;<input name="si" type="checkbox" value=""></td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                              </tr>
+                            </table></td>
           </tr>
           </table>
           <a href="AsignacionPlaqueta.html" class="btn btn-danger btn-user btn-block">
