--- a/Nosotros.html
+++ b/Nosotros.html
@@ -41,7 +41,7 @@
 
       <!-- Nav Item - Dashboard -->
       
-      <li class="nav-item" >
+      <li class="nav-item active" >
         <a class="nav-link" href="Nosotros.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span></a>
