--- a/Beneficios.html
+++ b/Beneficios.html
@@ -299,10 +299,10 @@
 
           <!-- Page Heading -->
           
-         <div align="center"><a><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
+         <div align="center"><a><img src="https://i.ibb.co/G20dm9N/BANNER-INICIO-MEDICINA.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
          <TR>
 
-         <div align="center"><h1>AYUDA</h1></div>
+         <div align="center"><h1>BENEFICIOS</h1></div>
 
         </div>
         <!-- /.container-fluid -->
