--- a/Beneficios.html
+++ b/Beneficios.html
@@ -94,7 +94,7 @@
         <a class="nav-link" href="Ayuda.html">
           <i class="fas fa-fw fa-ambulance"></i>
           <span>Ayuda</span></a>
-      </li>
+       </li>
       
       <li class="nav-item active" >
         <a class="nav-link" href="Beneficios.html">
@@ -305,6 +305,58 @@
          <div align="center"><h1>BENEFICIOS</h1></div>
 
         </div>
+        <h1 class="site-heading text-center text-white d-none d-lg-block">
+    		<span class="site-heading-upper text-primary mb-3">Voluntariado de Donación de Sangre</span>
+    	</h1>
+    		<p class="mb-3">El voluntariado ha sido el alma de la Cruz Roja y de la Media Luna Roja desde su creación en 1863.
+          	</p>
+          	<p class="mb-3">Hoy, más que nunca, las y los voluntarios constituyen la espina dorsal de todas las actividades de la Cruz Roja y de la Media Luna Roja, colaboran con las Sociedades Nacionales para realizar con éxito sus acciones humanitarias y proyectos. Además brindan asistencia a millones de personas vulnerables que lo necesitan.
+          	</p>
+          	<p class="mb-3">El Movimiento de la Cruz Roja y de la Media Luna Roja tiene presencia en 191 países alrededor del mundo y cuenta con alrededor de 100 millones de integrantes entre miembros y voluntarios  quienes ofrecen su tiempo y buena voluntad. Gracias a su apoyo llegamos a miles de personas en situaciones de conflicto, desastre, enfermedad y pobreza, con un solo objetivo: aliviar el sufrimiento humano.
+          	</p>
+          	<div align="center"><a><img id="image1" src="https://static.wixstatic.com/media/2fcbd1_20dd49f16c8148eaabc82183ad80aa8c~mv2.gif"></a></div>
+        <!-- /.container-fluid -->
+
+      </div>
+
+      <section class="page-section clearfix">
+        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+          <h2 class="section-heading mb-4">
+            <span class="section-heading-upper">¿Qué beneficios tengo como donante voluntario?</span>
+          </h2>
+          <div align="left">
+          	<h2 class="section-heading mb-4">
+            	<span class="section-heading-upper">Beneficios Físicos</span>
+          	</h2>
+          <div>
+          <div align="left">
+          	<p class="mb-3">Donar sangre beneficia a la persona en varios aspectos:</p>
+          	<p>1. Al realizar toma de signos vitales (presión, temperatura, peso y pulso) se puede alertar sobre posibles enfermedades cardiovasculares, infecciones, entre otras.</p>
+          	<p>2. La prueba de hemoglobina sirve para conocer enfermedades como anemia y poliglobulia.</p>
+          	<p>3. Las pruebas realizadas son de VIH, Chagas, Sífilis, Hepatitis B y C.</p>
+          	<p>4. En caso de pruebas reactivas, se llama al donante de forma personal y confidencial y se le pide que acuda a Cruz Roja a fin de realizarle una nueva toma de sangre para volver a correr las pruebas.</p>
+          	<p>5. El donante recibe asesoría antes de la toma a fin de sensibilizar al usuario sobre los riesgos y enfermedades.</p>
+          	<p>6. Al donante positivo se le brinda apoyo psicológico inicial sin costo y se lo remite a instituciones especializadas.</p>
+          	<p>7. Al momento de donar sangre, su organismo pone en marcha un mecanismo que inicia la producción de sangre nueva.</p>
+          	<p>8. El transporte de Oxígeno es mayor en las células nuevas producidas</p>
+          	<div align="center"><a><img id="image1" src="https://media0.giphy.com/media/26gR1CTfENiDu8jNm/giphy.gif"></a></div>
+          </div>	
+        </div>
+
+        <div align="left">
+          	<h2 class="section-heading mb-4">
+            	<span class="section-heading-upper">Otros Beneficios</span>
+          	</h2>
+          <div>
+          <div align="left">
+          	<p>1. Entrega de productos sanguíneos sin costo. El donante voluntario repetitivo tiene derecho a cinco producto sanguíneos para él/ella, o para sus hijos menores de 17 años, o 2 productos sanguíneos para sus padres mayores a 65 años. (Durante 6 meses luego de su última donación).</p>
+          	<p>2. Cruz Roja agradece al donante voluntario, altruista y repetitivo mediante la entrega de un incentivo, sin valor comercial.</p>
+          	<div align="center"><a><img id="image1" src="https://i.pinimg.com/originals/01/36/9b/01369b8f7e2a8a1371bd3e266a1d8fe2.gif"></a></div>
+          </div>	
+        </div>
+
+    </section>
+   		
         <!-- /.container-fluid -->
 
       </div>
