--- a/index.html
+++ b/index.html
@@ -269,20 +269,20 @@
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
+                  Perfil
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
+                  Configuracion
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activity Log
+                  Actividad
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+                  Salir
                 </a>
               </div>
             </li>
@@ -522,7 +522,7 @@
                     <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="https://i.ibb.co/0qMjs0m/logo.png" alt="">
                   </div>
                   <p>Una iniciativa ciudadana que busca recaudar fondos para ayudar al sistema de salud. </p>
-                  <a target="_blank" rel="nofollow" href="https://undraw.co/">Conoce m&aacute;s</a>
+                  <a target="_blank" rel="nofollow" href="https://www.salvarvidas.ec/?gclid=Cj0KCQjwzZj2BRDVARIsABs3l9I7Y7aL2l_AKeVZ8cqVkzcBrJysHvkPZkmWqlq9KFzU6uyM3_Et8J4aAkebEALw_wcB">Conoce m&aacute;s</a>
                 </div>
               </div>
 
