--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -361,10 +361,12 @@
             <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCiudad">
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
+							<option>Quito</option>
                     		</select></td>
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCanton">
                         	<option selected>Cant&oacute;n</option>
                         	<option>Guayaquil</option>
+							<option>Quito</option>
                     		</select></td>
             <td>&nbsp;</td>
             <td>Accidentes cerebrovasculares, epilesia, lipotimias o desmayos</td>
