--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -357,16 +357,70 @@
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
                         	<option selected>Provincia</option>
                         	<option>Guayas</option>
+							<option>Azuay</option>
+							<option>Bolivar</option>
+							<option>Cañar</option>
+							<option>Carchi</option>
+							<option>Chimborazo</option>
+							<option>Cotopaxi</option>
+							<option>El Oro</option>
+							<option>Esmeraldas</option>
+							<option>Francisco de Orellana</option>
+							<option>Galapagos</option>
+							<option>Imbabura</option>
+							<option>Loja</option>
+							<option>Los Ríos</option>
+							<option>Manabi</option>
+							<option>Morona Santiago</option>
+							<option>Napo</option>
+							<option>Orellana</option>
+							<option>Pastaza</option>
+							<option>Pichincha</option>
+							<option>Santa Elena</option>
+							<option>Santo Domingo</option>
+							<option>Sucumbios</option>
+							<option>Tunguragua</option>
+							<option>Zamora Chinchipe</option>
                     		</select></td>
             <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCiudad">
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
 							<option>Quito</option>
-                    		</select></td>
+							<option>Cuenca</option>
+							<option>Santo Domingo</option>
+							<option>Machala</option>
+							<option>Duran</option>
+							<option>Portoviejo</option>
+							<option>Ibarra</option>
+							<option>Babahoyo</option>
+							<option>Jipijapa</option>
+							<option>Bahia De Caraquez</option>
+							<option>Chone</option>
+							<option>El Carmen</option>
+							<option>Ventanas</option>
+							<option>Buena Fe</option>
+							<option>Cotacachi</option>
+							<option>Daule</option>                    		
+							</select></td>
+
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCanton">
                         	<option selected>Cant&oacute;n</option>
                         	<option>Guayaquil</option>
 							<option>Quito</option>
+							<option>Jipijapa</option>
+							<option>Daule</option>
+							<option>Cotacachi</option>
+							<option>Portoviejo</option>
+							<option>Ibarra</option>
+							<option>Pajan</option>
+							<option>Frsncisco de Orellana</option>
+							<option>El Carmen</option>
+							<option>Machala</option>
+							<option>Santo Domingo</option>
+							<option>Ventanas</option>
+							<option>Quevedo</option>
+							<option>Babahoyo</option>
+							<option>Esmeraldas</option>
                     		</select></td>
             <td>&nbsp;</td>
             <td>Accidentes cerebrovasculares, epilesia, lipotimias o desmayos</td>
