--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -296,7 +296,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <marquee><h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1></marquee>
+          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" >
           <tr>
             <td colspan="4" align="center" style="color:#333;background-color:#CCC;"><b>Datos Personales</b></td>
