--- a/NuevoPaciente.html
+++ b/NuevoPaciente.html
@@ -66,7 +66,7 @@
         </a>
         <div id="collapsePages3" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="NuevoPaciente.html"><marquee>Nuevo Paciente</marquee></a>        
+            <a class="collapse-item" href="NuevoPaciente.html">Nuevo Paciente</a>        
           </div>
         </div>
       </li>
