--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -453,9 +453,13 @@
           </tr>
           </table>
 
-          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+			<div class="alert alert-warning alert-dismissable">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			<strong>¡Cuidado!</strong> Es muy importante que leas este mensaje de alerta.
+			</div>
+          <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
-                </a>
+                </a>DIO-->
           
         </div>
         <!-- /.container-fluid -->
