--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -453,10 +453,7 @@
           </tr>
           </table>
 
-			<div class="alert alert-warning alert-dismissable">
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			<strong>¡Cuidado!</strong> Es muy importante que leas este mensaje de alerta.
-			</div>
+			<input type=button value="Prueba la alerta" onClick=mi_alerta()>
           <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>DIO-->
