--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -453,7 +453,16 @@
           </tr>
           </table>
 
-			<input type=button value="Prueba la alerta" onClick=mi_alerta()>
+				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+				  <input type="submit" class="button" name="enviar" onclick="hizoClick()" value="Enviar">
+          
+<script>
+function hizoClick() {
+  alert("Enviado");
+}
+</script>
+                </a>
+
           <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>DIO-->
