--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -454,13 +454,13 @@
           </table>
 
 				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
-				  <input type="submit" class="button" name="enviar" onclick="hizoClick()" value="Enviar">
+				  <input type="submit" class="button" name="Registrar" onclick="hizoClick()" value="Registrar">
           
-<script>
-function hizoClick() {
-  alert("Enviado");
-}
-</script>
+					<script>
+						function hizoClick() {
+						alert("usuario Registrado");
+						}
+					</script>
                 </a>
 
           <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
