Ultimo Cambio Martha

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -20,8 +20,10 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" >
+<!--<embed src="resources/instrumental.mp3" width=0 height=0>-->
 
+    
   <!-- Page Wrapper -->
   <div id="wrapper">
 
@@ -302,12 +304,31 @@
          <div align="center"><a><img src="https://i.ibb.co/qY8Dqqr/donacio-n-sangre.jpg" alt="donacio-n-sangre" width="1086" height="232" border="0"></a></div>
          <TR>
 
-         <div align="center"><h1>CRUZ ROJA</h1></div><TR>
-         <div align="center"><h1>SISTEMA DE DONACIONES</h1></div>
-
+         <div align="center"><h1>CRUZ ROJA ECUATORIANA</h1></div><TR>
+         <div align="center"><h1>Una Institución al Servicio de la Vida</h1></div>
+		<div align="center"><h1>CAMPAÑAS DE DONACIÓN VOLUNTARIA DE SANGRE</h1></div>
+		
         </div>
-        <!-- /.container-fluid -->
-
+		
+		<div>	
+	<section>    
+	<div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/mMWa-e-cfR4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/2FiagwVhfc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>  
+  
+	</section>	
+	</div>
+	
+	 
+	
+	
+     <div>
+	 <section> 
+	<div align="left"><h1>La sangre nos conecta a todos, comparte vida, dona sangre.</h1></div>
+	 <!-- /.container-fluid -->
+	 </div> 
+	</section>
       </div>
       <!-- End of Main Content -->
 
