--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -17,16 +17,6 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  
-  
-  <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
-function popitup(url)
-{
-	newwindow=window.open(url,'name','height=400,width=700'); 
-	if (window.focus) {newwindow.focus()}
-	return false;
-}
-</SCRIPT>
 
 </head>
 
@@ -279,20 +269,20 @@ function popitup(url)
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
+                  Perfil
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
+                  Configuracion
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activity Log
+                  Actividad
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+                  Salir
                 </a>
               </div>
             </li>
@@ -367,14 +357,70 @@ function popitup(url)
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
                         	<option selected>Provincia</option>
                         	<option>Guayas</option>
+							<option>Azuay</option>
+							<option>Bolivar</option>
+							<option>Cañar</option>
+							<option>Carchi</option>
+							<option>Chimborazo</option>
+							<option>Cotopaxi</option>
+							<option>El Oro</option>
+							<option>Esmeraldas</option>
+							<option>Francisco de Orellana</option>
+							<option>Galapagos</option>
+							<option>Imbabura</option>
+							<option>Loja</option>
+							<option>Los Ríos</option>
+							<option>Manabi</option>
+							<option>Morona Santiago</option>
+							<option>Napo</option>
+							<option>Orellana</option>
+							<option>Pastaza</option>
+							<option>Pichincha</option>
+							<option>Santa Elena</option>
+							<option>Santo Domingo</option>
+							<option>Sucumbios</option>
+							<option>Tunguragua</option>
+							<option>Zamora Chinchipe</option>
                     		</select></td>
             <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCiudad">
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
-                    		</select></td>
+							<option>Quito</option>
+							<option>Cuenca</option>
+							<option>Santo Domingo</option>
+							<option>Machala</option>
+							<option>Duran</option>
+							<option>Portoviejo</option>
+							<option>Ibarra</option>
+							<option>Babahoyo</option>
+							<option>Jipijapa</option>
+							<option>Bahia De Caraquez</option>
+							<option>Chone</option>
+							<option>El Carmen</option>
+							<option>Ventanas</option>
+							<option>Buena Fe</option>
+							<option>Cotacachi</option>
+							<option>Daule</option>                    		
+							</select></td>
+
             <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCanton">
                         	<option selected>Cant&oacute;n</option>
                         	<option>Guayaquil</option>
+							<option>Quito</option>
+							<option>Jipijapa</option>
+							<option>Daule</option>
+							<option>Cotacachi</option>
+							<option>Portoviejo</option>
+							<option>Ibarra</option>
+							<option>Pajan</option>
+							<option>Frsncisco de Orellana</option>
+							<option>El Carmen</option>
+							<option>Machala</option>
+							<option>Santo Domingo</option>
+							<option>Ventanas</option>
+							<option>Quevedo</option>
+							<option>Babahoyo</option>
+							<option>Esmeraldas</option>
                     		</select></td>
             <td>&nbsp;</td>
             <td>Accidentes cerebrovasculares, epilesia, lipotimias o desmayos</td>
@@ -390,9 +436,8 @@ function popitup(url)
             <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
-            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html" onClick="return popitup('GeolocalizadorIndividual.html')"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
-			<td colspan="2">&nbsp;</td>
-</form></td>
+            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>Enfermedades renales, diabetes, &uacute;lcera</td>
             <td><input name="Si" type="checkbox" value="1"> Si</td>
@@ -408,9 +453,19 @@ function popitup(url)
           </tr>
           </table>
 
-          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
-                  Registrar
+				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+				  <input type="submit" class="button" name="Registrar" onclick="hizoClick()" value="Registrar">
+          
+					<script>
+						function hizoClick() {
+						alert("usuario Registrado");
+						}
+					</script>
                 </a>
+
+          <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+                  Registrar
+                </a>DIO-->
           
         </div>
         <!-- /.container-fluid -->
