--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -454,13 +454,15 @@
           </table>
 
 				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
-				  <input type="submit" class="button" name="Registrar" onclick="hizoClick()" value="Registrar">
+				  <input type="submit" class="button" name="Registrar" onclick="click()" value="Registrar">
+
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<button id="confirm">confirmar eliminacion</button> -->
           
 					<script>
-						function hizoClick() {
-						alert("usuario Registrado");
-						}
-$("#confirm").click(function(){
+					
+					$("#confirm").click(function(){
   var bool=confirm("Seguro de eliminar el dato?");
   if(bool){
     alert("se elimino correctamente");
@@ -468,10 +470,9 @@ $("#confirm").click(function(){
     alert("cancelo la solicitud");
   }
 });
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<button id="confirm">confirmar eliminacion</button>
-
-
+					<!-- 	function hizoClick() {
+						//alert("usuario Registrado");
+					//	}
 					</script>
                 </a>
 
