--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -454,11 +454,8 @@
           </table>
 
 				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
-				  <input type="submit" class="button" name="Registrar" id="confirm" onclick="click()" value="Registrar">
-
-
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<button id="confirm">confirmar eliminacion</button> -->
+				  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+					<button id="confirm">confirmar eliminacion</button>
           
 					<script>
 					
