--- a/NuevoDonanteOLD.html
+++ b/NuevoDonanteOLD.html
@@ -17,16 +17,6 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  
-  
-  <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
-function popitup(url)
-{
-	newwindow=window.open(url,'name','height=400,width=700'); 
-	if (window.focus) {newwindow.focus()}
-	return false;
-}
-</SCRIPT>
 
 </head>
 
@@ -279,20 +269,20 @@ function popitup(url)
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
+                  Perfil
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
+                  Configuracion
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activity Log
+                  Actividad
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+                  Salir
                 </a>
               </div>
             </li>
@@ -446,9 +436,8 @@ function popitup(url)
             <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
-            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html" onClick="return popitup('GeolocalizadorIndividual.html')"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
-			<td colspan="2">&nbsp;</td>
-</form></td>
+            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>Enfermedades renales, diabetes, &uacute;lcera</td>
             <td><input name="Si" type="checkbox" value="1"> Si</td>
@@ -464,7 +453,7 @@ function popitup(url)
           </tr>
           </table>
 
-          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+				<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
 				  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 					<button id="confirm">Registrar</button>
           
@@ -484,6 +473,9 @@ function popitup(url)
 					</script>
                 </a>
 
+          <!-- DIO<a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
+                  Registrar
+                </a>DIO-->
           
         </div>
         <!-- /.container-fluid -->
