--- a/utilities-other.html
+++ b/utilities-other.html
@@ -202,7 +202,7 @@
                 </h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="mr-3">
-                    <div class="icon-circle bg-primary">
+                    <div class="icon-circle bg-danger">
                       <i class="fas fa-file-alt text-white"></i>
                     </div>
                   </div>
