--- a/AsignacionPlaqueta.html
+++ b/AsignacionPlaqueta.html
@@ -344,7 +344,7 @@
 					<script>
 					
 					$("#confirm").click(function(){
-						var bool=confirm("Seguro de Registrar Asignacion de sangre al paciente?");
+						var bool=confirm("Seguro de Registrar Asignacion de Plaquetas al paciente?");
 							if(bool){
 								alert("se Registro Correctamente");
 									}else{
